 $Id: ChangeLog,v 1.167 2010/09/30 14:59:27 uehira Exp $

2010-09-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.2.1 released.
	* src/recvstatus2.c : fixed a bug.

2010-09-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.2.0 released.
	* MF rel_64bit.
	* configure.in : check struct statfs.f_bavail size.
	* src/events.c : check struct statfs.f_bavail size.
	* src/wdisk.c :  check __SVR4 and __NetBSD__.
	                 check struct statfs.f_bavail size.

2010-09-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.99 released.
	* prog/ee_manager, prog/wincd : The $* variables has been removed
	  in perl 5.10.
	* src/win.c : '*base' of 'lBitmap' never used. comment out.

2010-06-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.98 released.
	* src/win.c : fixed buffer overrun bug.

2010-06-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : bug fixed [in get_trigch()].

2010-06-13  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.97 released.
	* src/relaym.c : bug fixed.

2010-02-28  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.96 released.
	* configure.in : check sys/mtio.h (for fromtape, rtape, wtape).
	If sys/mtio.h does not exist, these programs are not compiled
	(ex. Mac OS X 10.6).

2010-02-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.95 released.
	* src/wtape.c, src/setexb.c : fixed some potential bugs.

2009-12-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.94 released.
	* src/relaym.c : bug fixed.

2009-12-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.93 released.
	* src/order.c : bug fixed.

2009-11-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.92 released.
	* src/winrandsimu6.c : added WIN random simulater, real-time version.
	* src/select_bylatlon.c : added.

2009-02-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/win_m : do not use "-kanjifont". comment out.
