@@ -1,8 +1,10 @@
- $Id: ChangeLog,v 1.167 2010/09/30 14:59:27 uehira Exp $
+ $Id: ChangeLog,v 1.168 2010/10/01 01:00:41 uehira Exp $
 
 2010-09-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Version 1.2.1 released.
 	* src/recvstatus2.c : fixed a bug.
+	* src/recvt.c : fixed bugs in check_pno().
+	                ht[].pnos[] : unsigned int --> int
 
 2010-09-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Version 1.2.0 released.
